Corrección: Arreglar carga de plantillas de correo en producción (JAR)